--- a/.github/workflows/tpcds.yml
+++ b/.github/workflows/tpcds.yml
@@ -47,38 +47,46 @@ jobs:
           echo /tmp/spark/sbin >> $GITHUB_PATH
           start-master.sh -i localhost
           start-slave.sh spark://localhost:7077
-#
-#      - name: Set up tpcds-kit
-#        working-directory: /tmp
-#        run: |
-#          sudo apt-get install gcc make flex bison byacc git
-#          git clone --depth 1 https://github.com/databricks/tpcds-kit.git
-#          cd tpcds-kit/tools
-#          make OS=LINUX
 
-#      - name: Set up spark-sql-perf
-#        working-directory: /tmp
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install apt-transport-https curl gnupg -yqq
-#          echo "deb https://repo.scala-sbt.org/scalasbt/debian all main" | sudo tee /etc/apt/sources.list.d/sbt.list
-#          echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | sudo tee /etc/apt/sources.list.d/sbt_old.list
-#          curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | sudo -H gpg --no-default-keyring --keyring gnupg-ring:/etc/apt/trusted.gpg.d/scalasbt-release.gpg --import
-#          sudo chmod 644 /etc/apt/trusted.gpg.d/scalasbt-release.gpg
-#          sudo apt-get update
-#          sudo apt-get install sbt
-#          mkdir ~/.sbt
-#          cat > ~/.sbt/repositories <<EOF
-#          [repositories]
-#          local
-#          maven-central: https://repo1.maven.org/maven2/
-#          typesafe-releases: https://repo.typesafe.com/typesafe/ivy-releases/, [organization]/[module]/(scala_[scalaVersion]/)(sbt_[sbtVersion]/)[revision]/[type]s/[artifact](-[classifier]).[ext]
-#          EOF
-#          git clone --depth 1 https://github.com/databricks/spark-sql-perf.git
-#          cd spark-sql-perf
-#          sbt package
+      - name: Set up tpcds-kit
+        working-directory: /tmp
+        run: |
+          sudo apt-get install gcc make flex bison byacc git
+          git clone --depth 1 https://github.com/databricks/tpcds-kit.git
+          cd tpcds-kit/tools
+          make OS=LINUX
+
+      - name: Set up spark-sql-perf
+        working-directory: /tmp
+        run: |
+          sudo apt-get update
+          sudo apt-get install apt-transport-https curl gnupg -yqq
+          echo "deb https://repo.scala-sbt.org/scalasbt/debian all main" | sudo tee /etc/apt/sources.list.d/sbt.list
+          echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | sudo tee /etc/apt/sources.list.d/sbt_old.list
+          curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | sudo -H gpg --no-default-keyring --keyring gnupg-ring:/etc/apt/trusted.gpg.d/scalasbt-release.gpg --import
+          sudo chmod 644 /etc/apt/trusted.gpg.d/scalasbt-release.gpg
+          sudo apt-get update
+          sudo apt-get install sbt
+          mkdir ~/.sbt
+          cat > ~/.sbt/repositories <<EOF
+          [repositories]
+          local
+          maven-central: https://repo1.maven.org/maven2/
+          typesafe-releases: https://repo.typesafe.com/typesafe/ivy-releases/, [organization]/[module]/(scala_[scalaVersion]/)(sbt_[sbtVersion]/)[revision]/[type]s/[artifact](-[classifier]).[ext]
+          EOF
+          git clone --depth 1 https://github.com/databricks/spark-sql-perf.git
+          cd spark-sql-perf
+          sbt package
 
       - name: Gen data
         working-directory: /tmp
-        run:
+        run: |
           spark-shell --version
+          spark-shell \
+          --jars /tmp/spark-sql-perf/target/scala-2.12/spark-sql-perf*.jar \
+          --master spark://localhost:7077 \
+          --deploy-mode client \
+          --executor-memory 2G \
+          --driver-memory 2G \
+          --num-executors 1 \
+          -i ~/work/juicefs/juicefs/.github/workflows/resources/tpcds_datagen.scala
