--- a/.github/workflows/tpcds.yml
+++ b/.github/workflows/tpcds.yml
@@ -2,8 +2,16 @@ name: tpcds
 
 on:
   push:
-    tags:
-      - release*
+    branches:
+      - 'release-**'
+    paths-ignore:
+      - 'docs/**'
+  pull_request:
+    #The branches below must be a subset of the branches above
+    branches:
+      - 'release-**'
+    paths-ignore:
+      - 'docs/**'
 
 jobs:
   tpcds:
