--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,8 @@ before_script:
   - wget https://dl.min.io/client/mc/release/linux-amd64/mc && chmod +x mc && ./mc config host add local http://127.0.0.1:9000 testUser testUserPassword && ./mc mb local/testbucket
   - make
   - sudo make -C fstests setup
+  - chmod +x travis-setup-hdfs.sh
+  - ./travis-setup-hdfs.sh
 script:
   - sudo chmod 777 /var/jfsCache
   - make test
