--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -10,7 +10,7 @@ on:
   pull_request:
     #The branches below must be a subset of the branches above
     branches:
-      - 'main'
+      - 'release-**'
     paths-ignore:
       - 'docs/**'
 
