--- a/.github/workflows/sysbench_smallfile_seqrw.yml
+++ b/.github/workflows/sysbench_smallfile_seqrw.yml
@@ -60,10 +60,10 @@ jobs:
           sudo ls -lh
           sudo df -lh
           sudo stat /jfs
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqwr --time=960  prepare
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrewr --time=480  prepare
           sudo ls -lh
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqwr --time=960  run
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqwr --time=960  cleanup
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrewr --time=480  run
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrewr --time=480  cleanup
           sudo ls -lh
           sudo df -lh
 
@@ -73,9 +73,9 @@ jobs:
           pwd
           sudo ls -lh
           sudo df -lh
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqwr --time=960  prepare
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrewr --time=480  prepare
           sudo ls -lh
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqwr --time=960  run
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqwr --time=960  cleanup
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrewr --time=480  run
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrewr --time=480  cleanup
           sudo ls -lh
           sudo df -lh
